Resolves mrhubbs#5.  This implements left, right, and centered images, none of which wrap text around the image.

--- a/static/style/posts.less
+++ b/static/style/posts.less
@@ -25,6 +25,11 @@
   margin-left: 0.78rem;
 }
 
+.post-image {
+  margin-top: 2.7rem;
+  margin-bottom: 2.7rem;
+}
+
 .post-as-link {
   font-family: "Ubuntu";
   font-weight: bold;
